# Objektinis-programavimas-2

./: CMakeLists.txt  Pradinė  README.md  arTestiDarba.cpp  arTestiDarba.h  build.bat  demonstracijos.cpp  demonstracijos.h  generavimas.cpp  generavimas.h  generuoti_atsitiktinius.cpp  generuoti_atsitiktinius.h  generuoti_i_txt.cpp  generuoti_i_txt.h  issaugoti_i_txt.cpp  issaugoti_i_txt.h  isvedimas.cpp  isvedimas.h  ivesk.cpp  ivesk.h  ivesti_is_failo.cpp  ivesti_is_failo.h  ivesti_rankiniu_budu.cpp  ivesti_rankiniu_budu.h  ivestis.cpp  ivestis.h  kursiokai.txt  main.cpp  mediana.cpp  mediana.h  padalinti_i_grupes.cpp  padalinti_i_grupes.h  pagalbines_funkcijos.cpp  pagalbines_funkcijos.h  pasirinkti_skaiciavimo_metoda.cpp  pasirinkti_skaiciavimo_metoda.h  rezultatai.cpp  rezultatai.h  rodyti_menu.cpp  rodyti_menu.h  (+20 more)
Doxygen/html/: annotated.html  class_studentas.html  class_zmogus.html  demonstracijos_8cpp.html  demonstracijos_8h.html  doxygen.css  doxygen_crawl.html  files.html  generavimas_8cpp.html  generavimas_8h.html  generavimas_8h_source.html  hierarchy.html  isvedimas_8cpp.html  isvedimas_8h.html  isvedimas_8h_source.html  ivestis_8cpp.html  ivestis_8h.html  ivestis_8h_source.html  main_8cpp.html  menudata.js  pagalbines__funkcijos_8cpp.html  pagalbines__funkcijos_8h.html  rezultatai_8cpp.html  rezultatai_8h.html  rezultatai_8h_source.html  rusiavimas__ir__rikiavimas_8cpp.html  rusiavimas__ir__rikiavimas_8h.html  rusiavimas__ir__rikiavimas_8h_source.html  studentas_8cpp.html  studentas_8h.html  studentas_8h_source.html  vector__list__testavimas_8cpp.html  vector__list__testavimas_8h.html  vector__list__testavimas_8h_source.html  zmogus_8cpp.html  zmogus_8h.html
tests/: test_studentas.cpp  test_zmogus.cpp
